finalizando estrutura do projeto

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
       name="description"
       content="Web site que busca perfis no Github usando create-react-app"
     />
+    <link rel="shortcut icon" href="github-16px.png" type="image/x-icon">
     <title>Github Search</title>
   </head>
   <body>
